# mgsdfe

./: .gitignore  Cargo.toml  index.html  run_web.html
app/: Cargo.toml  index.html  wasm-pack.toml
app/pkg/: app.d.ts  app.js  app_bg.wasm  app_bg.wasm.d.ts  package.json
app/src/: app.rs  lib.rs  main.rs  ui.rs
app/src/user_interface/: ui.rs
app/src/utility/: functions.rs  macros.rs
common/: Cargo.toml
common/src/: lib.rs  macros.rs  main.rs
common/src/singletons/: scene.rs  settings.rs  time_package.rs
deprecated/: app.rs
graph_editor/: Cargo.toml
graph_editor/src/: lib.rs
graphing_stuff/: Cargo.toml
graphing_stuff/src/: app.rs  graph.rs  graph_traverser.rs  lib.rs  main.rs  nodes_and_types.rs
graphing_stuff/src/passer/: passer_layer.rs
path_tracer/: Cargo.toml
path_tracer/src/: display_texture_pipeline.rs  lib.rs  path_trace_renderer.rs  path_tracer_package.rs
path_tracer/src/shaders/: render_texture_shader.wgsl  test_raymarch.glsl  testing.glsl
path_tracer/src/utility/: dual_storage_texture_package.rs  helper_structs.rs  vertex_library.rs  vertex_package.rs
pkg/: mgsdfe.d.ts  mgsdfe.js  mgsdfe_bg.wasm.d.ts  package.json  sdt_thing.d.ts  sdt_thing.js  sdt_thing_bg.wasm.d.ts
rendering_stuff/: Cargo.toml
rendering_stuff/src/: lib.rs  path_tracer_package.rs  render_state.rs  render_texture_pipeline.rs
rendering_stuff/src/inbuilt/: old_stuff.txt  vertex_package.rs
rendering_stuff/src/shaders/: no_map_raymarch.glsl  path_tracer.glsl  test_no_m_ray.glsl  tex_test.glsl
rendering_stuff/src/utility/: structs.rs
shader_paser/: Cargo.toml
shader_paser/src/: datastructures.rs  lib.rs  transform_mat.rs
sibling_crates/per_profiler/: Cargo.toml
sibling_crates/per_profiler/per_macros/: Cargo.toml
sibling_crates/per_profiler/per_macros/src/: lib.rs
sibling_crates/per_profiler/performance_code/: Cargo.toml
sibling_crates/per_profiler/performance_code/examples/: graph_example.rs  macro_test.rs
sibling_crates/per_profiler/performance_code/src/: dec_macros.rs  function_profile.rs  lib.rs  main.rs  profiler.rs
sibling_crates/per_profiler/performance_profiler/: Cargo.toml
sibling_crates/per_profiler/performance_profiler/examples/: graph_example.rs
sibling_crates/per_profiler/performance_profiler/src/: lib.rs
src/: app.rs  lib.rs  main.rs  native.rs  wasm.rs
src/global_utility/: macros.rs  structs.rs
src/path_tracer/: display_texture_pipeline.rs  path_trace_renderer.rs  path_tracer_package.rs
src/path_tracer/render_utility/: dual_storage_texture_package.rs  gpu_profiler.rs  helper_structs.rs  vertex_library.rs  vertex_package.rs
src/path_tracer/shaders/: render_texture_shader.wgsl  test_but_maby_it_fucken_works_this_time_for_a_chance.glsl  testing.glsl
src/render_state/: meh_renderer.rs  structs.rs
src/render_state/shaders/: path_tracer.glsl  render_texture_shader.wgsl
src/render_state/test/: test_compute.glsl  test_render_pipeline.rs
src/singletons/: scene.rs  settings.rs  time_package.rs
src/user_interface/: ui.rs  ui_modules.rs
src/utility/: functions.rs  macros.rs  structs.rs
