[package]
name = "sdt_thing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.28.1"
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }

log = "0.4"
bytemuck = "1.14.0"
once_cell = "1.19.0"
instant = { version = "0.1.13", features = ["now", "wasm-bindgen"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.93"
