[package]
name = "sdt_thing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.28.1"
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }

wgpu = { version = "0.20.1", features = ["glsl", "webgpu"] }

log = "0.4"
bytemuck = "1.14.0"
once_cell = "1.19.0"
instant = { version = "0.1.13", features = ["now", "wasm-bindgen"] }
serde = { version = "1.0.208", features = ["derive"] }

#egui extentions
egui_plot = "0.28.1"
catppuccin-egui = { version = "5.1", default-features = false, features = ["egui28"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"
machine-info = "1.0.6"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.93"
