[package]
name = "mgsdfe"
version = "0.2.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "app_bin"
path = "src/native.rs"


[profile.release]
opt-level = 3
lto = "fat"
debug = "none"
panic = "abort"
codegen-units = 1


[dependencies]
egui = "0.28.1"
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }

wgpu = { version = "0.20.1", features = ["glsl", "webgpu"] }
egui-wgpu = "0.28.1"

log = "0.4"
bytemuck = "1.14.0"
once_cell = "1.19.0"
pollster = "0.3.0"
instant = { version = "0.1.13", features = ["now", "wasm-bindgen"] }

serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.128"

flume = { version = "0.11.0", features = []}

strum = { version = "0.26.3", features = ["derive"] }

#egui extentions
egui_plot = "0.28.1"
catppuccin-egui = { version = "5.2.0", default-features = false, features = ["egui28"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies] # native
env_logger = "0.11.5"


[target.'cfg(target_arch = "wasm32")'.dependencies] # web
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.93"


