[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "app_bin"
path = "src/main.rs"


[dependencies]
egui = "0.28.1"
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }

wgpu = { version = "0.20.1", features = ["glsl", "webgpu"] }

log = "0.4"
bytemuck = "1.14.0"
once_cell = "1.19.0"
serde = { version = "1.0.208", features = ["derive"] }

rendering_stuff = { path = "../rendering_stuff" }
graphing_stuff = { path = "../graphing_stuff" }
common = { path = "../common" }

#egui extentions
egui_plot = "0.28.1"
catppuccin-egui = { version = "5.1", default-features = false, features = ["egui28"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.93"


[profile.release]
opt-level = 3
lto = "fat"
debug = "none"
panic = "abort"
codegen-units = 1
