[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }

strum = { version = "0.26.3", features = ["derive"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.128"

catppuccin-egui = { version = "5.1", default-features = false, features = ["egui28"] }
instant = { version = "0.1.13", features = ["now", "wasm-bindgen"] }
once_cell = "1.19.0"
bytemuck = { version = "1.14.0", features = ["derive"] }

wgpu = { version = "0.20.1", features = ["glsl", "webgpu"] }
egui-wgpu = "0.28.1"