[package]
name = "graphing_stuff"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }
egui_node_graph2 = "0.6.0"
anyhow = "1.0"
serde = { version = "1.0", optional = true }
strum = {version = "0.26.3", features = ["derive"]}
shader_paser = {path = "../shader_paser"}
common = { path = "../common" }

[features]
default = []
persistence = ["serde", "egui_node_graph2/persistence", "eframe/persistence"]