[package]
name = "path_tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "0.28.1", features = [] }
wgpu = { version = "0.20.1", features = ["glsl", "webgpu"] }
egui-wgpu = "0.28.1"
bytemuck = { version = "1.14.0", features = ["derive"] }
once_cell = "1.19.0"

eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }

common = { path = "../common" }