[package]
name = "rendering_stuff"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "0.28.1", features = [] }
wgpu = { version = "0.20.1", features = ["glsl", "webgpu"] }
bytemuck = { version = "1.14.0", features = ["derive"] }
once_cell = "1.19.0"
serde = { version = "1.0.208", features = ["derive"] }
egui-wgpu = "0.28.1"

common = { path = "../common" }


image = "0.25.2"